[project]
name = "customer-support-triage-openenv"
version = "1.1.0"
description = "OpenEnv benchmark for customer support triage."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
